# fieldsync

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/reputation-attestation/: Cargo.toml
programs/reputation-attestation/src/: lib.rs
programs/session-payment/: Cargo.toml
programs/session-payment/src/: lib.rs
tests/: agent-registry.test.ts  full-flow.test.ts  reputation-attestation.test.ts  session-payment.test.ts
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(focused)/: layout.tsx
web/app/(main)/: layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/profile/: page.tsx
web/components/agents/: AgentAvatar.tsx  AgentCard.tsx
web/components/home/: AskFieldSync.tsx  BlockBrainPreview.tsx  Builders.tsx  Dashboard.tsx  Discovery.tsx  Footer.tsx  Hero.tsx  HeroCanvas.tsx  HoloBackground.tsx  HowItWorksPreview.tsx  LiveFeed.tsx  LiveStats.tsx  Nav.tsx  Reveal.tsx  SynchronyHero.tsx  Ticker.tsx  Trending.tsx
web/components/layout/: Footer.tsx  Header.tsx
web/components/ui/: AnimatedCounter.tsx  FieldSyncLogo.tsx  FieldSyncMark.tsx  SynchronyBackground.tsx
web/components/wallet/: WalletButton.tsx  WalletProvider.tsx
web/lib/: agents.ts  anchor-client.ts  mock-attestations.ts  session-payment.ts  solana.ts  submit-attestation.ts
web/lib/idl/: agent_registry.json  (+2 more)
web/types/: agent.ts  attestation.ts  home.ts  session.ts
(+20 files in other folders)
