[package]
name = "reputation-attestation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "agent-registry/idl-build"]
default = []

[dependencies]
anchor-lang = "1.0.0"
agent-registry = { path = "../agent-registry", features = ["cpi"] }
